@@ -235,8 +235,8 @@
      ;; elisp-common
      "elisp-check-emacs-version" "elisp-compile" "elisp-emacs-version"
      "elisp-enable-tests" "elisp-install" "elisp-make-autoload-file"
-     "elisp-modules-install" "elisp-site-file-install" "elisp-site-regen"
-     "elisp-test" "elisp-test-buttercup" "elisp-test-ert"
+     "elisp-make-site-file" "elisp-modules-install" "elisp-site-file-install"
+     "elisp-site-regen" "elisp-test" "elisp-test-buttercup" "elisp-test-ert"
      "elisp-test-ert-runner"
      ;; emboss-r3
      "emboss-r3_src_configure" "emboss-r3_src_install"
@@ -708,13 +708,13 @@
      "gcc_movelibs" "gentoo_urls" "get_gcc_src_uri" "get_make_var" "is_ada"
      "is_crosscompile" "is_cxx" "is_d" "is_f77" "is_f95" "is_fortran" "is_go"
      "is_jit" "is_modula2" "is_multilib" "is_objc" "is_objcxx" "is_rust"
-     "make_gcc_hard" "setup_multilib_osdirnames" "should_we_gcc_config"
-     "tc_has_feature" "tc_is_live" "tc_use_major_version_only"
-     "tc_version_is_at_least" "tc_version_is_between" "toolchain_death_notice"
-     "toolchain_pkg_postinst" "toolchain_pkg_postrm" "toolchain_pkg_pretend"
-     "toolchain_pkg_setup" "toolchain_src_compile" "toolchain_src_configure"
-     "toolchain_src_install" "toolchain_src_prepare" "toolchain_src_test"
-     "toolchain_src_unpack"
+     "setup_multilib_osdirnames" "should_we_gcc_config"
+     "tc_enable_hardened_gcc" "tc_has_feature" "tc_is_live"
+     "tc_use_major_version_only" "tc_version_is_at_least"
+     "tc_version_is_between" "toolchain_death_notice" "toolchain_pkg_postinst"
+     "toolchain_pkg_postrm" "toolchain_pkg_pretend" "toolchain_pkg_setup"
+     "toolchain_src_compile" "toolchain_src_configure" "toolchain_src_install"
+     "toolchain_src_prepare" "toolchain_src_test" "toolchain_src_unpack"
      ;; toolchain-autoconf
      "slot_info_pages" "toolchain-autoconf_src_configure"
      "toolchain-autoconf_src_install" "toolchain-autoconf_src_prepare"
