@@ -1,3 +1,8 @@
+2023-07-06  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 2023-07-05  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-repo-mode): local-variable-p has two
